--- a/UsingRedBlackTree/RedBlackTree/RedBlackTree.vcxproj
+++ b/UsingRedBlackTree/RedBlackTree/RedBlackTree.vcxproj
@@ -151,7 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="RBTree.cpp" />
     <ClCompile Include="RedBlackTree.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RBTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
