--- a/UsingRedBlackTree/RedBlackTree/RedBlackTree.vcxproj.filters
+++ b/UsingRedBlackTree/RedBlackTree/RedBlackTree.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="RedBlackTree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="RBTree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RBTree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
